[package]

name = "fluent"
version = "0.1.0"
authors = ["ocadaruma <ocadaruma@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/ocadaruma/fluent-logger-rust"

[features]
default = []

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rmp = "0.8"
rmp-serde = "0.13.5"
clippy = {version = "0.0.145", optional = true}
